# llm-qwen25

./: README.md  pyproject.toml
llm_qwen25/: __init__.py
tests/: build_plugin.py  test_qwen25.py
